<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".PosyanduFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gambar_posyandu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/title_foto_posyandu"
                android:cropToPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/kantor_kelurahan_kemang_manis__kec_ilir_barat_ii__kota_palembang" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                app:layout_constraintTop_toBottomOf="@id/gambar_posyandu">


                <TextView
                    android:id="@+id/nama_posyandu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/nama_posyandu"
                    android:textColor="#2980B9"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/alamat_posyandu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/alamat_posyandu"
                    android:textColor="#BDC3C7"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/nama_posyandu" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_jadwal"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintTop_toBottomOf="@id/alamat_posyandu">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="14dp">

                        <TextView
                            android:id="@+id/jadwal_konsultasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/jadwal_konsultasi_card_title"
                            android:textColor="#2980B9"
                            android:textSize="22sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/jadwal_terdekat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/jadwal_konsultasi">

                            <ImageButton
                                android:id="@+id/kalender"
                                android:layout_width="53dp"
                                android:layout_height="53dp"
                                android:background="@null"
                                android:importantForAccessibility="no"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/baseline_calendar_today_24" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/text_jadwal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@id/kalender"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/kapan"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter"
                                    android:text="@string/jadwal_konsultasi_card_subtitle"
                                    android:textColor="#2980B9"
                                    android:textSize="19sp"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/tanggal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/kapan"
                                    android:fontFamily="@font/inter"
                                    android:text="@string/jadwal_konsultasi_card_jadwal"
                                    android:textColor="#282828"
                                    android:textSize="17sp"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/kapan" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tanggal"
                                    android:fontFamily="@font/inter"
                                    android:text="@string/jadwal_terakhir_jam"
                                    android:textColor="#282828"
                                    android:textSize="17sp"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tanggal" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/link_card"
                            android:textColor="#2980B9"
                            android:textSize="11sp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/jadwal_terdekat" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_risiko"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintTop_toBottomOf="@id/card_jadwal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="14dp">

                        <TextView
                            android:id="@+id/card_risiko_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/card_risiko_title"
                            android:textColor="@color/primary"
                            android:textSize="22sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/card_status_risiko"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card_risiko_title">

                            <ImageView
                                android:id="@+id/tanda_risiko"
                                android:layout_width="53dp"
                                android:layout_height="53dp"
                                android:layout_margin="5dp"
                                android:background="@null"
                                android:importantForAccessibility="no"
                                android:src="@drawable/done_checkmark"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/text_risiko"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:fontFamily="@font/inter"
                                android:text="Anda tidak berisiko stunting"
                                android:textColor="#27AE60"
                                android:textSize="19sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@id/tanda_risiko"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/link_card"
                            android:textColor="#2980B9"
                            android:textSize="11sp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card_status_risiko" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_kader"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintTop_toBottomOf="@id/card_risiko">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="14dp">

                        <TextView
                            android:id="@+id/card_kader_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="5 kader terdaftar"
                            android:textColor="@color/primary"
                            android:textSize="22sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/card_kader_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card_kader_title">

                            <ImageView
                                android:id="@+id/card_kader_icon"
                                android:layout_width="53dp"
                                android:layout_height="53dp"
                                android:layout_margin="5dp"
                                android:background="@null"
                                android:importantForAccessibility="no"
                                android:src="@drawable/kader"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/card_kader_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:fontFamily="@font/inter"
                                android:maxLines="3"
                                android:text="Kenali kader-kader terdekatmu!"
                                android:textColor="@color/primary"
                                android:textSize="19sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@id/card_kader_icon"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/link_card"
                            android:textColor="#2980B9"
                            android:textSize="11sp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card_kader_content" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>